--- a/数组/1486.数组异或操作_E.md
+++ b/数组/1486.数组异或操作_E.md
@@ -1,20 +1,24 @@
-/*
 【题目】
+
 给你两个整数，n 和 start 。
 数组 nums 定义为：nums[i] = start + 2*i（下标从 0 开始）且 n == nums.length 。
 请返回 nums 中所有元素按位异或（XOR）后得到的结果。
+
 【示例】
-输入：n = 5, start = 0
-输出：8
-解释：数组 nums 为 [0, 2, 4, 6, 8]，其中 (0 ^ 2 ^ 4 ^ 6 ^ 8) = 8 。
-     "^" 为按位异或 XOR 运算符。
-*/
 
-/*
-我的思路：按照题意不难构造出数组nums，再将nums按位异或即可
-*/
+> 输入：n = 5, start = 0
+> 输出：8
+> 解释：数组 nums 为 [0, 2, 4, 6, 8]，其中 (0 ^ 2 ^ 4 ^ 6 ^ 8) = 8 。（ "^" 为按位异或 XOR 运算符）
 
-/*我的代码*/
+---
+
+【我的思路】
+
+按照题意不难构造出数组nums，再将nums按位异或即可
+
+【我的代码】
+
+```c++
 class Solution {
 public:
     int xorOperation(int n, int start) {
@@ -27,12 +31,15 @@ public:
         return m;
     }
 };
+```
 
-/*
-题解思路：思路与我类似，简化代码，不再构建数组nums
-*/
+【题解思路】
 
-/*题解代码*/
+思路与我类似，简化代码，不再构建数组nums
+
+【题解代码】
+
+```c++
 class Solution {
 public:
     int xorOperation(int n, int start) {
@@ -43,3 +50,5 @@ public:
         return res;
     }
 };
+```
+
