--- a/数组/1512.好数对的数目_E.md
+++ b/数组/1512.好数对的数目_E.md
@@ -1,18 +1,22 @@
-todo：使用哈希表
-/*
 【题目】
+
 给你一个整数数组 nums，如果一组数字 (i,j) 满足 nums[i] == nums[j] 且 i < j ，就可以认为这是一组 好数对，返回好数对的数目。
+
 【示例】
-输入：nums = [1,2,3,1,1,3]
-输出：4
-解释：有 4 组好数对，分别是 (0,3), (0,4), (3,4), (2,5) ，下标从 0 开始
-*/
 
-/*
-思路：暴力法，使用两重循环遍历数组nums，再根据好数对的条件进行判断。
-*/
+> 输入：nums = [1,2,3,1,1,3]
+> 输出：4
+> 解释：有 4 组好数对，分别是 (0,3), (0,4), (3,4), (2,5) ，下标从 0 开始
 
-/*代码*/
+---
+
+【思路】
+
+暴力法，使用两重循环遍历数组nums，再根据好数对的条件进行判断。
+
+【代码】
+
+```c++
 class Solution {
 public:
     int numIdenticalPairs(vector<int>& nums) {
@@ -26,5 +30,5 @@ public:
         return ans;
     }
 };
+```
 
-/*2020-10-21*/
