--- a/字符串/1108.IP地址无效化_E.md
+++ b/字符串/1108.IP地址无效化_E.md
@@ -6,7 +6,7 @@
 
 【示例】
 
-输入：address = "1.1.1.1"
+>输入：address = "1.1.1.1"  
 输出："1[.]1[.]1[.]1"
 
 ---
@@ -78,7 +78,7 @@ replace()函数的用法
  *string& replace (size_t pos, size_t len, const string& str); 
  */ 
  	string line = "this@ is@ a test string!";  
-    line = line.replace(line.find("@"), 1, ""); //从第一个@位置替换第一个@为空
+	line = line.replace(line.find("@"), 1, ""); //从第一个@位置替换第一个@为空
 //运行结果：this is@ a test string!
 ```
 
@@ -88,7 +88,7 @@ replace()函数的用法
  *string& replace (const_iterator i1, const_iterator i2, const string& str); 
  */ 
  	string line = "this@ is@ a test string!";  
-    line = line.replace(line.begin(), line.begin()+6, "");  //用str替换从begin位置开始的6个字符 
+	line = line.replace(line.begin(), line.begin()+6, "");  //用str替换从begin位置开始的6个字符 
 //运行结果：is@ a test string!
 ```
 
@@ -98,8 +98,8 @@ replace()函数的用法
  *string& replace (size_t pos, size_t len, const string& str, size_t subpos, size_t sublen); 
  */  
  	string line = "this@ is@ a test string!";  
-    string substr = "12345";  
-    line = line.replace(0, 5, substr, substr.find("1"), 3); //用substr的指定子串（从1位置数共3个字符）替换从0到5位置上的line  
+	string substr = "12345";  
+	line = line.replace(0, 5, substr, substr.find("1"), 3); //用substr的指定子串（从1位置数共3个字符）替换从0到5位置上的line  
 //运行结果：123 is@ a test string!
 ```
 
@@ -108,9 +108,9 @@ replace()函数的用法
  *用str替换从指定位置0开始长度为5的字符串 
  *string& replace(size_t pos, size_t len, const char* s); 
  */  
- 	string line = "this@ is@ a test string!";  
-    char* str = "12345";  
-    line = line.replace(0, 5, str); //用str替换从指定位置0开始长度为5的字符串 
+	string line = "this@ is@ a test string!";  
+	char* str = "12345";  
+	line = line.replace(0, 5, str); //用str替换从指定位置0开始长度为5的字符串 
 //运行结果：12345 is@ a test string!
 ```
 
@@ -120,8 +120,8 @@ replace()函数的用法
  *string& replace (const_iterator i1, const_iterator i2, const char* s); 
  */  
 	string line = "this@ is@ a test string!";  
-    char* str = "12345";  
-    line = line.replace(line.begin(), line.begin()+9, str); //用str替换从指定迭代器位置的字符串  
+	char* str = "12345";  
+	line = line.replace(line.begin(), line.begin()+9, str); //用str替换从指定迭代器位置的字符串  
 //运行结果：12345 a test string!
 ```
 
@@ -130,9 +130,9 @@ replace()函数的用法
  *用s的前n个字符替换从开始位置pos长度为len的字符串 
  *string& replace(size_t pos, size_t len, const char* s, size_t n); 
  */ 
- 	string line = "this@ is@ a test string!";  
-    char* str = "12345";  
-    line = line.replace(0, 9, str, 4);  //用str的前4个字符替换从0位置开始长度为9的字符串  
+	string line = "this@ is@ a test string!";  
+	char* str = "12345";  
+	line = line.replace(0, 9, str, 4);  //用str的前4个字符替换从0位置开始长度为9的字符串  
 //运行结果：1234 a test string!
 ```
 
@@ -142,8 +142,8 @@ replace()函数的用法
  *string& replace (const_iterator i1, const_iterator i2, const char* s, size_t n); 
  */  
 	string line = "this@ is@ a test string!";  
-    char* str = "12345";  
-    line = line.replace(line.begin(), line.begin()+9, str, 4);  //用str的前4个字符替换指定迭代器位置的字符串
+	char* str = "12345";  
+	line = line.replace(line.begin(), line.begin()+9, str, 4);  //用str的前4个字符替换指定迭代器位置的字符串
 //运行结果：1234 a test string!
 ```
 
@@ -153,8 +153,8 @@ replace()函数的用法
  *string& replace (size_t pos, size_t len, size_t n, char c); 
  */  
 	string line = "this@ is@ a test string!";  
-    char c = '1';  
-    line = line.replace(0, 9, 3, c);    //用重复3次的c字符替换从指定位置0长度为9的内容  
+	char c = '1';  
+	line = line.replace(0, 9, 3, c);    //用重复3次的c字符替换从指定位置0长度为9的内容  
 //运行结果：111 a test string!
 ```
 
@@ -163,9 +163,9 @@ replace()函数的用法
  *用重复n次的c字符替换从指定迭代器位置（从i1开始到结束）的内容 
  *string& replace (const_iterator i1, const_iterator i2, size_t n, char c); 
  */
- 	string line = "this@ is@ a test string!";  
-    char c = '1';  
-    line = line.replace(line.begin(), line.begin()+9, 3, c);    //用重复3次的c字符替换从指定迭代器位置的内容  
+	string line = "this@ is@ a test string!";  
+	char c = '1';  
+	line = line.replace(line.begin(), line.begin()+9, 3, c);    //用重复3次的c字符替换从指定迭代器位置的内容  
 //运行结果：111 a test string!
 ```
 
