--- a/数组/1365.有多少小于当前数字的数字_E/1365.有多少小于当前数字的数字_E.md
+++ b/数组/1365.有多少小于当前数字的数字_E/1365.有多少小于当前数字的数字_E.md
@@ -59,7 +59,7 @@ public:
 
 图片解释：
 
-![fig]()
+![fig](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E6%95%B0%E7%BB%84/1365.%E6%9C%89%E5%A4%9A%E5%B0%91%E5%B0%8F%E4%BA%8E%E5%BD%93%E5%89%8D%E6%95%B0%E5%AD%97%E7%9A%84%E6%95%B0%E5%AD%97_E/1365.%E6%9C%89%E5%A4%9A%E5%B0%91%E5%B0%8F%E4%BA%8E%E5%BD%93%E5%89%8D%E6%95%B0%E5%AD%97%E7%9A%84%E6%95%B0%E5%AD%97_E.png)
 
 【题解代码】
 
