--- a/数组/1389.按既定顺序创建目标数组_E.md
+++ b/数组/1389.按既定顺序创建目标数组_E.md
@@ -14,12 +14,12 @@
 > 输入：nums = [0,1,2,3,4], index = [0,1,2,2,1]  
 > 输出：[0,4,1,3,2]  
 > 解释：  
-> nums       index    target  
->      0            0        [0]  
->      1            1        [0,1]  
->      2            2        [0,1,2]  
->      3            2        [0,1,3,2]  
->      4            1        [0,4,1,3,2]
+> nums----index----target  
+>     0--------0------------[0]  
+>     1--------1------------[0,1]  
+>     2--------2------------[0,1,2]  
+>     3--------2------------[0,1,3,2]  
+>     4--------1------------[0,4,1,3,2]
 
 ---
 
