--- a/字符串/1180.统计只含单一字母的子串_E.md
+++ b/字符串/1180.统计只含单一字母的子串_E.md
@@ -33,7 +33,7 @@ public:
         int ans = 0;  //ans为每个连续子串可以分成不同子串的数量
         int count = 1;  //只含单一字母的连续子串的长度count，默认为1
         for(int i = 1; i < S.size(); ++i){  //遍历S
-            if (S[i-1] = S[i]){  //找连续的字符
+            if (S[i-1] == S[i]){  //找连续的字符
                 count++;  //长度加1
             }
             else{  //字符不连续
