--- a/数学/1134.阿姆斯特朗数_E.md
+++ b/数学/1134.阿姆斯特朗数_E.md
@@ -77,8 +77,8 @@ public:
 【Tips】
 
 char与int之间的加减法（比如 1 + '0' 和 '1' - '0'）  
-1. 如果用一个`char`与一个`int`相加，我们会得到一个`char`。比如：`'0' + 1 = 48 + 1 = 49 = '1'`。  
-2.如果用一个`char`减去另一个`char`，我们会得到一个`int`。比如：`'2' - '0' = 50 - 48 = 2`。  
-3.所以，如果想把一个int型的数（比如 i = 5）转成`char`型，我们可以写成：`char c = i + '0'`。  
-4.如果想把一个`char`型的数（比如 c = '5'）转成`int`型，我们可以写成：`int i = c - '0'`。
+> 如果用一个`char`与一个`int`相加，我们会得到一个`char`。比如：`'0' + 1 = 48 + 1 = 49 = '1'`。  
+> 如果用一个`char`减去另一个`char`，我们会得到一个`int`。比如：`'2' - '0' = 50 - 48 = 2`。  
+> 所以，如果想把一个int型的数（比如 i = 5）转成`char`型，我们可以写成：`char c = i + '0'`。  
+> 如果想把一个`char`型的数（比如 c = '5'）转成`int`型，我们可以写成：`int i = c - '0'`。
 
