--- a/数组/1512.好数对的数目_E.md
+++ b/数组/1512.好数对的数目_E.md
@@ -10,11 +10,11 @@
 
 ---
 
-【思路】
+【我的思路—暴力循环】
 
 暴力法，使用两重循环遍历数组nums，再根据好数对的条件进行判断。
 
-【代码】
+【我的代码】
 
 ```c++
 class Solution {
@@ -32,6 +32,26 @@ public:
 };
 ```
 
-【TODO】
+【题解思路—哈希表】
 
-哈希表
+维护一个哈希表，key是nums中的数字，value是对应数字在nums中重复的次数，首先遍历一遍nums，得到hash表，又因为在nums中出现一次的数字没有好数对，出现两次的数字有一个好数对，出现三次的数字有三个好数对，因此出现n次的数字有((n-1)*n)/2个好数对，故得到hash表后遍历它，累加每个数字出现的好数对个数，最终得到结果
+
+【题解代码—哈希表】
+
+```c++
+class Solution {
+public:
+    int numIdenticalPairs(vector<int>& nums) {
+        int hash[101] = {0}; //hash全0初始化
+        int ans = 0;
+        for(int i = 0; i < nums.size(); ++i){
+            hash[nums[i]]++;  //hash table键为nums中的数字，值为出现的次数       
+        }
+        for(auto x:hash){  //遍历hash table
+            ans += (x*(x-1))/2;  //累加每个数字存在的好数对个数
+        }
+        return ans;
+    }
+};
+```
+
