--- a/数组/1588.所有奇数长度子数组的和_E.md
+++ b/数组/1588.所有奇数长度子数组的和_E.md
@@ -127,3 +127,27 @@ public:
 };
 ```
 
+【Tips】
+
+`C++`中`accumulate`的用法：
+
+`accumulate`定义在`#include<numeric>`中，作用有两个，一个是累加求和，另一个是自定义类型数据的处理
+
+（1）累加求和
+
+```c++
+int sum = accumulate(vec.begin() , vec.end() , 42);  
+```
+
+`accumulate`带有三个形参：头两个形参指定要累加的元素范围，第三个形参则是累加的初值。
+
+`accumulate`函数将它的一个内部变量设置为指定的初始值，然后在此初值上累加输入范围内所有元素的值。`accumulate`算法返回累加的结果，其返回类型就是其第三个实参的类型。
+
+可以使用`accumulate`把`string`型的`vector`容器中的元素连接起来：
+
+```c++
+string sum = accumulate(v.begin() , v.end() , string(" "));  
+```
+
+这个函数调用的效果是：从空字符串开始，把`vec`里的每个元素连接成一个字符串。
+
