--- a/数学/800.相似RGB颜色_E.md
+++ b/数学/800.相似RGB颜色_E.md
@@ -41,27 +41,79 @@ public:
 };
 ```
 
+【题解思路2—暴力法】
+
+将输入的`color`按照两两分为`rgb`三位，计算出`rgb`三者对应的十进制大小，再使用两重循环找到与`rgb`色差最小的颜色，第一重循环对应`rgb`三者，范围0到2，第二重循环对应颜色的取值，范围0到15，然后都将颜色转为十进制计算差异`diff`，最后将得到的相似`rgb`颜色存于`ans`字符串中
+
+【题解代码2—暴力法】
+
+```c++
+class Solution {
+public:
+  string similarRGB(string color) {
+    const string hex{"0123456789abcdef"};
+    vector<int> rgb(3, 0);
+    for (int i = 0; i < 3; ++i)
+        rgb[i] = hex.find(color[2 * i + 1]) * 16 + hex.find(color[2 * i + 2]);  //将color两位两位转成十进制，存于rgb中
+    string ans(7, '#');  //初始化ans字符串用于存放结果数组
+    for (int i = 0; i < 3; ++i) {  //第一重循环对应rgb三位
+        int best = INT_MAX;  //INT_MAX==2^31-1
+        for (int j = 0; j < 16; ++j) {  //第二重循环用来寻找相似的颜色
+            int diff = abs(j * 16 + j - rgb[i]);  //所有颜色都转为十进制来计算差异
+            if (diff >= best) continue;  //如果diff >= best，回到for循环
+            best = diff;  //而若diff < best，best更新为diff
+            ans[2 * i + 1] = ans[2 * i + 2] = hex[j];  //ans对应的两位更新为当前最相似的颜色代码，在rgb各自循环结束后，最终ans对应的即为最相似的颜色
+        }
+    }
+    return ans;
+  }
+};
+```
+
 【TIPS】
 
-（1）C++中`substr()`函数的用法
+**（1）**C++中`substr()`函数的用法
 
 * 用途：`substr(`)是一种构造`string`的方法
 * 形式：`s.substr(pos, n)`
 * 解释：该函数返回一个`string`，包含`s`中从`pos`开始的`n`个字符的拷贝（`pos`的默认值是0，`n`的默认值是`s.size() - pos`，即不加参数会默认拷贝整个`s`）
 * 补充：若`pos`的值超过了`string`的大小，则`substr`函数会抛出一个`out_of_range`异常；若`pos+n`的值超过了`string`的大小，则`substr`会调整`n`的值，只拷贝到`string`的末尾
 
-（2）[C++字符串转换之`stoi`](https://blog.csdn.net/baidu_34884208/article/details/88342844)
+**（2）**[C++字符串转换之`stoi`](https://blog.csdn.net/baidu_34884208/article/details/88342844)
 
 ```c++
 int stoi (const string&  str, size_t* idx = 0, int base = 10);
 int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 ```
 
-* 用途：解析str的文本转化为为int整数（具体用法见本题代码）
+* 用途：解析str的文本转化为为int整数（具体用法见本题解法1代码）
 
 * 参数：
 * **str**：表示所要转化的字符串 
 * **idx**：表示想要str中开始转化的位置，默认为从第一个字符开始（此参数是空指针(**nullptr**)）
 * **base**：表示要用的进制（如2进制、16进制，默认为10进制）转化为int类型十进制数字
 
-（3）string(2, 'A')指的是用2个'A'初始化
+**（3）**`string(2, 'A')`指的是用2个`'A'`初始化
+
+**（4）**C++中`find()`函数的[用法](https://blog.csdn.net/m0_37691414/article/details/86813102)
+
+* 用途：用于在指定范围内查找和目标元素值相等的第一个元素
+
+* 一般表示：`find(start, end, value)`，其中`start`表示寻找的起点，`end`表示寻找的终点，`value`表示寻找的值
+
+* 容器表示：`find(a.begin(), a.end(), value)`
+
+* 数组表示：`find(a, a+length, val)`
+
+* 返回：所有的返回均是迭代器（容器）或指针（数组），而非是直观感觉上的索引下标（因为索引下标是在数组这种连续存储的数据结构里面常见的，是一种顺序索引；而很多数据结构的存储并非连续的，不能实现顺序索引，为了兼顾所有的数据结构，所以返回的仅仅是指针或是迭代器。）。如果在查找范围内不存在，返回`a.end()`，这里需要注意的是，`a.end()`不在查找范围内。
+
+* 各个容器实现的`find`函数：`vector`没有实现`find`函数，除此之外，常见容器都实现了自己的`find`函数。`String`是这一种顺序存储结构，其`find`函数返回的是*下标索引*。`set`,`map`,`multiset`,`multimap`都不是顺序索引的数据结构，所以返回的是迭代器。
+
+* 如何通过find()函数判断元素是否存在：  
+
+>1.对于返回迭代器的查找，通过判断`find（a.begin(),a.end(),value）==a.end()`，来判断元素是否存在。    
+2.对于`string`，通过`a.find(val)==string::npos`判断。
+
+**（5）**C++中`continue`的用法
+
+![img](https://www.runoob.com/wp-content/uploads/2014/09/c-continue-statement-works.jpg)
