--- a/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
+++ b/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
@@ -95,7 +95,7 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 
 **（3）**`string(2, 'A')`指的是用2个`'A'`初始化
 
-**（4）**C++中`find()`函数的[用法](https://blog.csdn.net/m0_37691414/article/details/86813102)
+**（4）** C++中`find()`函数的[用法](https://blog.csdn.net/m0_37691414/article/details/86813102)
 
 * 用途：用于在指定范围内查找和目标元素值相等的第一个元素
 
@@ -115,6 +115,8 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 2.对于`string`，通过`a.find(val)==string::npos`判断。
 
 **（5）** C++中`continue`的用法
+
+如下图：
 
 ![](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E6%95%B0%E5%AD%A6/800.%E7%9B%B8%E4%BC%BCRGB%E9%A2%9C%E8%89%B2_E/800.png)
 
