--- a/数组/1299.将每个元素替换为右侧最大元素_E/1299.将每个元素替换为右侧最大元素_E.md
+++ b/数组/1299.将每个元素替换为右侧最大元素_E/1299.将每个元素替换为右侧最大元素_E.md
@@ -13,7 +13,7 @@
 
 【我的思路】
 
-从前往后遍历数组arr，对于每个数字，从它之后到最后的元素中找到最大值，并替换该数字，最后将最后一位替换为-1
+从前往后遍历数组`arr`，对于每个数字，从它之后到最后的元素中找到最大值，并替换该数字，最后将最后一位替换为`-1`
 
 【我的代码】
 
@@ -33,7 +33,7 @@ public:
 
 时间复杂度太高，当测试用例规模增加后，超过时间限制，提交未通过，考虑采用其他方法降低时间复杂度。
 
-查看题目下的提示信息后，考虑从后往前遍历数组arr。首先用-1初始化一个新数组ans用于存放结果（可以避免最后对末位置-1的操作），然后遍历数组arr，并得到当前的最大值max_now，假设此时遍历到下标`i`，那么这个最大值max_now就是下标`i-1`右边的最大元素值，将这个值添加到ans的`i-1`下标处，遍历结束即可得到最终替换后的数组`ans`
+查看题目下的提示信息后，考虑从后往前遍历数组`arr`。首先用`-1`初始化一个新数组`ans`用于存放结果（可以避免最后对末位置`-1`的操作），然后遍历数组`arr`，并得到当前的最大值`max_now`，假设此时遍历到下标`i`，那么这个最大值`max_now`就是下标`i-1`右边的最大元素值，将这个值添加到ans的`i-1`下标处，遍历结束即可得到最终替换后的数组`ans`
 
 修改后的代码如下：
 
@@ -55,4 +55,5 @@ public:
 
 下面用图来表示程序的执行流程：
 
-![](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E6%95%B0%E7%BB%84/1299.%E5%B0%86%E6%AF%8F%E4%B8%AA%E5%85%83%E7%B4%A0%E6%9B%BF%E6%8D%A2%E4%B8%BA%E5%8F%B3%E4%BE%A7%E6%9C%80%E5%A4%A7%E5%85%83%E7%B4%A0_E/1299.png)
+![1299](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E6%95%B0%E7%BB%84/1299.%E5%B0%86%E6%AF%8F%E4%B8%AA%E5%85%83%E7%B4%A0%E6%9B%BF%E6%8D%A2%E4%B8%BA%E5%8F%B3%E4%BE%A7%E6%9C%80%E5%A4%A7%E5%85%83%E7%B4%A0_E/1299.png)
+
