--- a/字符串/1374.生成每种字符都是奇数个的字符串_E.md
+++ b/字符串/1374.生成每种字符都是奇数个的字符串_E.md
@@ -37,3 +37,19 @@ public:
 };
 ```
 
+改进：
+
+```c++
+class Solution {
+public:
+    string generateTheString(int n) {
+        //如果n是偶数
+        if(!(n % 2)){
+            return string(n - 1, 'p') + 'z';
+        }
+        //如果n是奇数
+        else return string(n, 'p');
+    }
+};
+```
+
