--- a/字符串/804.唯一摩尔斯密码词_E.md
+++ b/字符串/804.唯一摩尔斯密码词_E.md
@@ -90,7 +90,7 @@ C++ STL之`unordered_set`（无序set容器）
 
 （1）不再以键值对的形式存储数据，而是直接存储数据的值（可以理解为`unordered_set `存储的都是键和值相等的键值对，为了节省存储空间，该类容器在实际存储时选择只存储每个键值对的值）
 
-（2）容器内部存储的各个元素的值都互补相等，且不能被修改
+（2）容器内部存储的各个元素的值都互不相等，且不能被修改
 
 （3）不会对内部存储的数据进行排序（与底层采用`HashTable`结构有关），通过元素值的 hash 值将元素分组放置到各个槽（Bucket，也可译成“桶”）中，这样就能通过元素值快速地访问各个对应的元素（平均耗时为一个常量，即时间复杂度为 `O(1)`）
 
