--- a/字符串/1436.旅行终点站_E.md
+++ b/字符串/1436.旅行终点站_E.md
@@ -83,11 +83,19 @@ public:
 
 C++中`set`与`unordered_set`区别和`map`与`unordered_map`区别类似：
 
-1. `set`基于红黑树实现，红黑树具有自动排序功能，因此`map`内部所有的数据，在任何时候，都是有序的
+1.数据结构
 
-2. `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存。
+* `map`基于红黑树实现，红黑树具有自动排序功能（会按照键值对的键 `key` 进行排序），因此`map`内部所有的数据，在任何时候，都是有序的
 
-3. `set`使用时设置：
+* `unordered_map`基于哈希表，内部元素无序
+
+* `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存
+
+* `set`实现了红黑树的平衡二叉检索树的数据结构，内部按照元素大小从小到大进行排序
+
+2.使用
+
+* `set`使用时设置：
 
 (1)我们需要有序数据（不同的元素）
 
@@ -95,7 +103,7 @@ C++中`set`与`unordered_set`区别和`map`与`unordered_map`区别类似：
 
 (3)我们需要元素的前身/后继者
 
-4. 在以下情况下使用`unordered_set`:
+* 在以下情况下使用`unordered_set`:
 
 (1)我们需要保留一组不同的元素，不需要排序
 
