--- a/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
+++ b/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
@@ -99,7 +99,7 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 
 * 用途：用于在指定范围内查找和目标元素值相等的第一个元素
 
-* 一般表示：`find(start, end, value)`，其中`start`表示寻找的起点，`end`表示寻找的终点，`value`表示寻找的值
+* 一般表示：`find(start, end, value)`，其中`start`表示寻找的起点，`end`表示寻找的终点（左闭右开），`value`表示寻找的值
 
 * 容器表示：`find(a.begin(), a.end(), value)`
 
@@ -107,12 +107,12 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 
 * 返回：所有的返回均是迭代器（容器）或指针（数组），而非是直观感觉上的索引下标（因为索引下标是在数组这种连续存储的数据结构里面常见的，是一种顺序索引；而很多数据结构的存储并非连续的，不能实现顺序索引，为了兼顾所有的数据结构，所以返回的仅仅是指针或是迭代器。）。如果在查找范围内不存在，返回`a.end()`，这里需要注意的是，`a.end()`不在查找范围内。
 
-* 各个容器实现的`find`函数：`vector`没有实现`find`函数，除此之外，常见容器都实现了自己的`find`函数。`String`是这一种顺序存储结构，其`find`函数返回的是*下标索引*。`set`,`map`,`multiset`,`multimap`都不是顺序索引的数据结构，所以返回的是迭代器。
+* 各个容器实现的`find`函数：`vector`没有实现`find`函数，只能使用泛型`find()`，除此之外，常见容器都实现了自己的`find`函数。`String`是这一种顺序存储结构，其`find`函数返回的是*下标索引*。`set`,`map`,`multiset`,`multimap`都不是顺序索引的数据结构，所以返回的是迭代器。
 
 * 如何通过find()函数判断元素是否存在：  
 
->1.对于返回迭代器的查找，通过判断`find（a.begin(),a.end(),value）==a.end()`，来判断元素是否存在。    
-2.对于`string`，通过`a.find(val)==string::npos`判断。
+>1.对于返回迭代器的查找，通过判断`find(a.begin(), a.end(), value) == a.end()`，来判断元素是否存在。    
+2.对于`string`，通过`a.find(val) == string::npos`判断。
 
 **（5）** C++中`continue`的用法
 
