--- a/字符串/1436.旅行终点站_E.md
+++ b/字符串/1436.旅行终点站_E.md
@@ -85,11 +85,11 @@ C++中`set`与`unordered_set`区别和`map`与`unordered_map`区别类似：
 
 1.数据结构
 
-* `map`基于红黑树实现，红黑树具有自动排序功能（会按照键值对的键 `key` 进行排序），因此`map`内部所有的数据，在任何时候，都是有序的
+* `map`基于红黑树实现，红黑树具有自动排序功能（会按照键值对的键 `key` 进行排序），因此`map`内部所有的数据，在任何时候，都是有序的，并且key不允许重复
 
 * `unordered_map`基于哈希表，内部元素无序
 
-* `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存
+* `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存，**集合的特点是没有重复的元素，这个特点非常适合用于纪录某个数据中是否有重复的数据**
 
 * `set`实现了红黑树的平衡二叉检索树的数据结构，内部按照元素大小从小到大进行排序
 
@@ -105,7 +105,21 @@ C++中`set`与`unordered_set`区别和`map`与`unordered_map`区别类似：
 
 * 在以下情况下使用`unordered_set`:
 
-(1)我们需要保留一组不同的元素，不需要排序
+(1)我们需要保留一组**不同**的元素，不需要排序
 
 (2)我们需要单个元素访问，即没有遍历
+
+* `map`使用：
+
+(1)取出键值对的方法：
+
+```c++
+unorderes_map<int, int> Map;
+vector<int> keys;
+vector<int> values;
+for(auto kv : Map){  //遍历Map得到键值对
+	keys.push_back(kv.first);  //通过.first取出键
+    keys.push_back(kv.second);  //通过.second取出值
+}
+```
 
