--- a/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
+++ b/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
@@ -74,10 +74,11 @@ public:
 
 **（1）** C++中`substr()`函数的用法
 
-* 用途：`substr(`)是一种构造`string`的方法
+* 用途：`substr()`是一种构造`string`的方法
 * 形式：`s.substr(pos, n)`
 * 解释：该函数返回一个`string`，包含`s`中从`pos`开始的`n`个字符的拷贝（`pos`的默认值是0，`n`的默认值是`s.size() - pos`，即不加参数会默认拷贝整个`s`）
-* 补充：若`pos`的值超过了`string`的大小，则`substr`函数会抛出一个`out_of_range`异常；若`pos+n`的值超过了`string`的大小，则`substr`会调整`n`的值，只拷贝到`string`的末尾
+* 补充1：若`pos`的值超过了`string`的大小，则`substr`函数会抛出一个`out_of_range`异常；若`pos+n`的值超过了`string`的大小，则`substr`会调整`n`的值，只拷贝到`string`的末尾
+* 补充2：若`s.substr(n)`中只有一个参数`n`，则表示从下标为`n`开始一直到`s`结尾
 
 **（2）**[C++字符串转换之`stoi`](https://blog.csdn.net/baidu_34884208/article/details/88342844)
 
@@ -112,7 +113,7 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 * 如何通过find()函数判断元素是否存在：  
 
 >1.对于返回迭代器的查找，通过判断`find(a.begin(), a.end(), value) == a.end()`，来判断元素是否存在。    
-2.对于`string`，通过`a.find(val) == string::npos`判断。
+2.对于`string`，通过`a.find(val) == string::npos`判断，如果没找到，会返回【-1】，例子见【811题，子域名访问计数】
 
 **（5）** C++中`continue`的用法
 
