--- a/字符串/1436.旅行终点站_E.md
+++ b/字符串/1436.旅行终点站_E.md
@@ -89,7 +89,7 @@ C++中`set`与`unordered_set`区别和`map`与`unordered_map`区别类似：
 
 * `unordered_map`基于哈希表，内部元素无序
 
-* `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存，**集合的特点是没有重复的元素，这个特点非常适合用于纪录某个数据中是否有重复的数据**
+* `unordered_set`基于哈希表，数据插入和查找的时间复杂度很低，几乎是常数时间，而代价是消耗比较多的内存，无自动排序功能。底层实现上，使用一个下标范围比较大的数组来存储元素，形成很多的桶，利用`hash`函数对`key`进行映射到不同区域进行保存，**集合的特点是没有重复的元素，这个特点非常适合用于纪录某个数据中是否有重复的数据**【详见349.两个数组的交集】
 
 * `set`实现了红黑树的平衡二叉检索树的数据结构，内部按照元素大小从小到大进行排序
 
