--- a/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
+++ b/数学/800.相似RGB颜色_E/800.相似RGB颜色_E.md
@@ -115,6 +115,14 @@ int stoi (const wstring& str, size_t* idx = 0, int base = 10);
 >1.对于返回迭代器的查找，通过判断`find(a.begin(), a.end(), value) == a.end()`，来判断元素是否存在。    
 2.对于`string`，通过`a.find(val) == string::npos`判断，如果没找到，会返回【-1】，例子见【811题，子域名访问计数】
 
+* `string`的`find()`函数
+
+  用途：用于找出字母在字符串中的位置
+
+  写法：`s.find(str, position)`，其中str是要找的元素，position是指原字符串中的某个位置，表示从这个位置开始的字符串中找指定元素
+
+  返回值：若找到，返回目标字符的位置下标；若没有找到，返回s.npos（string::npos表示-1或4294967295）【见1704题】
+
 **（5）** C++中`continue`的用法
 
 如下图：
