--- a/链表/206.反转链表_E/206.反转链表_E.md
+++ b/链表/206.反转链表_E/206.反转链表_E.md
@@ -45,7 +45,7 @@ public:
 
 见下图：
 
-
+![jpg](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E9%93%BE%E8%A1%A8/206.%E5%8F%8D%E8%BD%AC%E9%93%BE%E8%A1%A8_E/1.jpg)
 
 【我的代码2—递归】
 
