--- a/树/101.对称二叉树_E.md
+++ b/树/101.对称二叉树_E.md
@@ -81,3 +81,54 @@ public:
 };
 ```
 
+【题解思路2—迭代】
+
+借助队列遍历整棵树，将root的left和right子树放入队列中，分别两两进行判断。
+
+【题解代码2—递归】
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    bool isSymmetric(TreeNode* root) {
+        if(root == nullptr) return true;  //特殊情况处理
+        queue<TreeNode*> que;
+        que.push(root->left);  //将root的左树放到que中
+        que.push(root->right);  //将root的右树放到que中
+        while(!que.empty()){
+            TreeNode* left = que.front();  //取出que中的前两个，分别是某根节点的左树和右树
+            que.pop();
+            TreeNode* right = que.front();
+            que.pop();
+            if(left == nullptr && right == nullptr){  //如果两个节点都为空就继续循环
+                continue;
+            }
+            if(left == nullptr || right == nullptr){  //两者有一个为空就返回false
+                return false;
+            }
+            if(left->val != right->val){  //两者值不等返回false
+                return false;
+            }
+            //将左节点的左孩子，右节点的右孩子放入队列
+            que.push(left->left);
+            que.push(right->right);
+            //将左节点的右孩子，右节点的左孩子放入队列
+            que.push(left->right);
+            que.push(right->left);
+        }
+        return true;
+    }
+};
+```
+
