--- a/树/501.二叉搜索树中的众数_E.md
+++ b/树/501.二叉搜索树中的众数_E.md
@@ -70,3 +70,62 @@ public:
 };
 ```
 
+【题解思路2—中序遍历】
+
+搜索树在中序遍历的过程中，就是有序序列，所以此时的问题相当于 给出如果给出一个有序数组，求最大频率的元素集合。所以要采用中序遍历。
+
+【题解代码2—中序遍历】
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    int maxCount;
+    int count;
+    vector<int> result;
+    TreeNode* pre;
+    //中序遍历
+    void searchBST(TreeNode* cur){
+        if(cur == NULL) return;
+        searchBST(cur->left);  //左
+        //中，处理节点
+        if(pre == NULL){  //第一个节点
+            count = 1;
+        }
+        else if(cur->val == pre->val){  //与前一个节点的数值相同
+            count++;
+        }
+        else{  //与前一个节点的数值不同
+            count = 1;
+        }
+        pre = cur;  //更新pre为cur
+        if(count == maxCount){  //如果和最大计数值相同，则放入result中
+            result.push_back(cur->val);
+        }
+        if(count > maxCount){  //如果比最大计数值大，则更新maxCount，清空result，将当前最大计数值的节点值放入result中
+            maxCount = count;
+            result.clear();
+            result.push_back(cur->val);
+        }
+        searchBST(cur->right);  //右
+        return;
+    }
+    vector<int> findMode(TreeNode* root) {
+        maxCount = 0;
+        count = 0;  //记录元素出现次数
+        pre = NULL;  //记录前一个节点
+        result.clear();
+        searchBST(root);
+        return result;
+    }
+};
+```
+
