--- a/哈希表/1086.前五科的均分_E.md
+++ b/哈希表/1086.前五科的均分_E.md
@@ -63,5 +63,5 @@ sort第三个谓词参数的定义：
 };
 ```
 
-关于这里谓词参数的定义需要加static的说明，详见[该链接](https://blog.csdn.net/qq_26849233/article/details/77930991)
+关于这里谓词参数的定义需要加static的说明，详见[该链接](https://blog.csdn.net/qq_26849233/article/details/77930991)或[该链接](https://blog.csdn.net/weixin_40710708/article/details/111269356)
 
