--- a/树/101.对称二叉树_E.md
+++ b/树/101.对称二叉树_E.md
@@ -19,17 +19,18 @@
 【题解思路1—递归】
 
 根据题目的描述，镜像对称，就是左右两边相等，也就是左子树和右子树是相当的。
-注意这句话，左子树和右子相等，也就是说要递归的比较左子树和右子树。
+注意这句话，左子树和右子树相等，也就是说要递归的比较左子树和右子树。
 我们将根节点的左子树记做 left，右子树记做 right。比较 left 是否等于 right，不等的话直接返回就可以了。
 如果相当，比较 left 的左节点和 right 的右节点，再比较 left 的右节点和 right 的左节点
 比如看下面这两个子树(他们分别是根节点的左子树和右子树)，能观察到这么一个规律：
 
 ```
-左子树 22 的左孩子 == 右子树 22 的右孩子
-左子树 22 的右孩子 == 右子树 22 的左孩子
+左子树 2 的左孩子 == 右子树 2 的右孩子
+左子树 2 的右孩子 == 右子树 2 的左孩子
 ```
 
 ```
+ 左子树      右子树
     2         2
    / \       / \
   3   4     4   3
@@ -81,11 +82,11 @@ public:
 };
 ```
 
-【题解思路2—迭代】
+【题解思路2—迭代（层序遍历）】
 
 借助队列遍历整棵树，将root的left和right子树放入队列中，分别两两进行判断。
 
-【题解代码2—递归】
+【题解代码2—递归（层序遍历）】
 
 ```c++
 /**
@@ -127,7 +128,7 @@ public:
             que.push(left->right);
             que.push(right->left);
         }
-        return true;
+        return true;  //全部遍历完了都没有跳出返回false，那么说明该树是对称的，返回true
     }
 };
 ```
