--- a/树/257.二叉树的所有路径_E.md
+++ b/树/257.二叉树的所有路径_E.md
@@ -62,6 +62,42 @@ public:
 };
 ```
 
+也可以这么写：
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    void recursion(TreeNode* node, string path, vector<string>& paths){
+        if(node == nullptr) return;  //递归终止条件
+        path += to_string(node->val);  //将当前节点值转为string加入到path
+        if(node->left == nullptr && node->right == nullptr){  //当前节点是叶子节点
+            paths.push_back(path);  //将此时的path加入结果数组中
+            return;
+        }
+        //如果当前节点不是叶子节点，继续遍历该节点的叶子节点
+        recursion(node->left, path + "->", paths); 
+        recursion(node->right, path + "->", paths);
+    }
+    vector<string> binaryTreePaths(TreeNode* root) {
+        vector<string> paths;
+        if(root == nullptr) return paths;
+        recursion(root, "", paths);
+        return paths;
+    }
+};
+```
+
 【题解思路2—BFS】
 
 维护一个队列，存储节点以及根到该节点的路径。一开始这个队列里只有根节点。在每一步迭代中，我们取出队列中的首节点，如果它是叶子节点，则将它对应的路径加入到答案中。如果它不是叶子节点，则将它的所有孩子节点加入到队列的末尾。当队列为空时广度优先搜索结束。
