--- a/链表/21.合并两个有序链表_E.md
+++ b/链表/21.合并两个有序链表_E.md
@@ -14,7 +14,8 @@
 【题解思路1—递归】
 
 终止条件：当两个链表都为空时，表示我们对链表已合并完成。
-如何递归：我们判断 l1 和 l2 头结点哪个更小，然后较小结点的 next 指针指向其余结点的合并结果。（调用递归）
+
+如何递归：我们判断 l1 和 l2 头结点哪个更小，然后较小结点的 next 指针指向其余结点的合并结果（两个链表头部值较小的一个节点与剩下元素的 `merge` 操作结果合并）
 
 具体参考[这个链接](https://leetcode-cn.com/problems/merge-two-sorted-lists/solution/yi-kan-jiu-hui-yi-xie-jiu-fei-xiang-jie-di-gui-by-/)
 
@@ -42,8 +43,10 @@ public:
           l1->next = mergeTwoLists(l1->next, l2);
           return l1;
       }
-      l2->next = mergeTwoLists(l1, l2->next);
-      return l2;
+      else if(l1->val > l2->val) {
+          l2->next = mergeTwoLists(l1, l2->next);
+          return l2;
+      }
     }
 };
 ```
@@ -72,7 +75,7 @@ public:
     ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
         ListNode* prehead = new ListNode(-1);  //创建一个虚拟头节点prehead用于保持l1或l2的头节点
         ListNode* pre = prehead;  //维护一个pre指针用于从小到大排序
-        while(l1 != nullptr || l2 != nullptr){  //重复以下过程直到l1或l2为null
+        while(l1 != nullptr && l2 != nullptr){  //重复以下过程直到l1或l2为null
             if(l1->val <= l2->val){  //l1小于等于l2
                 pre->next = l1;  //我们把l1当前的节点接在prev节点的后面
                 l1 = l1->next;  //将l1指针往后移一位
@@ -83,6 +86,10 @@ public:
             }
             pre = pre->next;  //不管将哪一个元素接在了后面，都需要把prev向后移一位
         }
+        /*
+        if(l1) pre->next = l1;
+        if(l2) pre->next = l2;
+        */
         pre->next = l1 == nullptr ? l2 : l1;  //合并后l1和l2最多只有一个还未被合并完，我们直接将链表末尾指向未合并完的链表即可
         return prehead->next;
     }
