--- a/数组/1431.拥有最多糖果的孩子_E.md
+++ b/数组/1431.拥有最多糖果的孩子_E.md
@@ -87,6 +87,8 @@ public:
 
 `max_element()`和`min_element()`函数：
 
+如：`max_element(r, r+6)`,返回数组`r`中`[0, 6)`之间的最大值的**迭代器**（注意：左闭右开）
+
 接受容器的首尾地址（迭代器），返回的是最值元素的地址（迭代器），需要减去序列头以转为下标，例如：
 
 ```c++
