--- a/数组/42.接雨水_H/42.接雨水_H.md
+++ b/数组/42.接雨水_H/42.接雨水_H.md
@@ -83,8 +83,8 @@ public:
         int ans = 0;
         for(int i = 1; i <= arrlength - 2; i++) {  //最左右的两列不会存水，不用考虑，故缩小范围
             int cur = height[i];
-            int left_max = *max_element(height.begin(), height.begin() + i);  //当前列左边最高的强
-            int right_max = *max_element(height.begin() + i + 1, height.end()); //当前列右边最高的强
+            int left_max = *max_element(height.begin(), height.begin() + i);  //当前列左边最高的墙
+            int right_max = *max_element(height.begin() + i + 1, height.end()); //当前列右边最高的墙
             if(cur < min(left_max, right_max)) {  //左右最高墙中较矮的墙的高度大于当前列的墙的高度，才能存水
                 ans += (min(left_max, right_max) - cur);
             }
@@ -188,13 +188,44 @@ public:
 
 空间复杂度`O(1）`，时间复杂度`O(n)`
 
-【题解思路5—栈】
+【[题解思路5—栈](https://leetcode-cn.com/problems/trapping-rain-water/solution/yi-miao-jiu-neng-du-dong-de-dong-hua-jie-o9sv/)】
 
-
+维护一个单调递减栈（栈底对应的值大于上面的），当前待入栈元素的高度小于栈顶对应的高度则入栈，否则**栈顶**，**栈顶的下面一个元素**和**当前要入栈的元素**就形成了一个洼地，从而计算此洼地的存水量
 
 【题解代码5—栈】
 
+```C++
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        stack<int> stk;
+        int ans = 0;
+        for(int i = 0; i < height.size(); i++) {
+            //待入栈高度大于栈顶高度
+            while(!stk.empty() && height[stk.top()] < height[i]) {  
+                //top_index为栈顶元素值
+                int top_index = stk.top();
+                stk.pop();
+                //去除相同高度的值
+                while(!stk.empty() && height[stk.top()] == height[top_index]) {
+                    stk.pop();
+                }
+                if(!stk.empty()) {
+                    int temp = stk.top();  //temp为栈顶的下一个元素值
+                    //i为待入栈的元素值（三个都是索引而非高度）
+                    //计算高度
+                    int high = min(height[temp] - height[top_index], height[i] - height[top_index]);
+                    int wide = i - stk.top() - 1;  //计算宽度
+                    ans += high*wide;  //计算并累加存水面积
+                }
+            }
+            //待入栈高度小于栈顶高度，直接入栈
+            stk.push(i);
+        }
+        return ans;
+    }
+};
 ```
 
-```
+时间复杂度`O(n)`，空间复杂度`O(n)`
 
