--- a/设计/146.LRU缓存机制_M.md
+++ b/设计/146.LRU缓存机制_M.md
@@ -232,11 +232,99 @@ public:
 
 【[题解思路2—哈希+自己创建list](https://leetcode-cn.com/problems/lru-cache/solution/146-lru-huan-cun-ji-zhi-ha-xi-biao-shuan-1t9l/)】
 
-不使用STL提供的list，自己创建一个双端队列
+不使用STL提供的双向链表`list`，自己创建一个`doubleList`
 
 【题解代码2—哈希+自己创建list】
 
-```
+```C++
+//双链表的节点类
+class Node {
+public:
+    int key, value;
+    Node* pre;
+    Node* next;
+    Node(int k, int v): key(k), value(v) {}
+};
+//依靠我们的 Node 类构建一个双链表
+class doubleList{
+private:
+    Node *dummyhead;
+    Node *dummytail;
+public:
+    //构造
+    doubleList() {
+        dummyhead = new Node(-1, -1);
+        dummytail = new Node(-1, -1);
+        dummyhead->next = dummytail;
+        dummytail->pre = dummyhead;
+    }
+    //头插
+    void addFirst(Node *node) {
+        node->pre = dummyhead;
+        node->next = dummyhead->next;
+        dummyhead->next = node;
+        node->next->pre = node;
+    }
+    //删除节点node:O(1)时间复杂度
+    void removeNode(Node* node) {
+        node->pre->next = node->next;
+        node->next->pre = node->pre;
+        delete node;
+    }
+    //返回最后一个节点
+    Node* getLastNode() {
+        return dummytail->pre;
+    }
+};
 
+class LRUCache {
+public:
+    int m_Capacity;
+    int m_Size;
+    unordered_map<int, Node*> m;
+    doubleList cache;
+
+    LRUCache(int capacity) {
+        this->m_Capacity = capacity;
+        this->m_Size = 0;
+    }
+    
+    int get(int key) {
+        //cache中存在此key
+        //巧用put方法把该数据提到链表头：put方法会创建一个和原来一模一样的node放到链表头
+        if(m.find(key) != m.end()) { 
+            put(key, m[key]->value);
+            return m[key]->value;
+        }
+        //cache中不存在此key
+        else {
+            return -1;
+        }
+    }
+    
+    void put(int key, int value) {
+        Node* new_node = new Node(key, value);  //将新节点new出来
+        //key在缓存中已经存在，
+        //删除旧节点，新的插到链表头
+        if(m.find(key) != m.end()) {
+            cache.removeNode(m[key]);  //删除旧节点
+            cache.addFirst(new_node); //新的节点插到链表头
+            m[key] = new_node;  //重新建立映射
+        }
+        //key在缓存中不存在，
+        //将其插入链表缓存头部，判断插入后的缓存是否已满，再做删除最后一个节点的处理
+        else {
+            cache.addFirst(new_node);
+            m[key] = new_node;
+            this->m_Size++;
+            if(m_Size > m_Capacity) {
+                Node* last_node = cache.getLastNode();  //先得到最后一个节点
+                m.erase(last_node->key);  //删除最后一个节点的映射。这句和下句要注意先删除映射再删除last_node，否则last_node->key会指向空地址
+                cache.removeNode(last_node);  //删除链表最后一个节点
+                this->m_Size--;
+            }
+        }
+    }
+};
 ```
 
