--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -28,11 +28,28 @@
 
 ##### 思路：
 
-
+每一轮选择最小的元素，将其交换到前面未排定部分的开头
 
 ##### 代码：
 
-```
-
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        int len = nums.size();
+        //[0,i)有序，且该区间里所有的元素就是最终排定的样子
+        for(int i = 0; i < len - 1; i++) {
+            //选择区间[i, len - 1]内最小元素的索引，将其与下标i的元素（即未排定部分的开头）交换
+            int minIndex = i;
+            for(int j = i + 1; j < len; j++) {
+                if(nums[j] < nums[minIndex]) {
+                    minIndex = j;
+                }
+            }
+            swap(nums[i], nums[minIndex]);
+        }
+        return nums;
+    }
+};
 ```
 
