--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -1,36 +1,48 @@
-### 【排序算法小结】
+### 排序算法小结
 
-> 1、选择排序
->
-> 2、插入排序
->
-> 3、归并排序
->
-> 4、快速排序
->
-> 5、堆排序
->
-> 6、希尔排序
->
-> 7、冒泡排序
->
-> 8、计数排序
->
-> 9、基数排序
->
-> 10、桶排序
+* 一、非线性时间比较类排序
+  * 1.1 交换排序
+    * [① 冒泡排序](#1.1.1)
+    * [② 快速排序](#1.1.2)
+  * 
+
+
+
+
+
+> * 非线性时间比较类排序
+>   * 交换排序
+>     * 冒泡排序
+>     * 快速排序
+>   * 插入排序
+>     * 简单插入排序
+>     * 希尔排序
+>   * 选择排序
+>     * 简单选择排序
+>     * 堆排序
+>   * 归并排序
+>     * 二路归并排序
+>     * 多路归并排序
+> * 线性时间非比较类排序
+>   * 计数排序
+>   * 桶排序
+>   * 基数排序
 
 ```
 背景：给一个整数数组nums，要求将该数组升序或者降序排列。
 ```
 
-#### 1、选择排序
+#### <h2 id="1.1.1"> 冒泡排序</h2>
 
 ##### 思路：
 
-每一轮选择最小的元素，将其交换到前面未排定部分的开头
+每一轮选择最小的元素，将其交换到前面未排定部分的开头。
+
+也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
 
 ##### 代码：
+
+算法：
 
 ```c++
 class Solution {
@@ -51,5 +63,66 @@ public:
         return nums;
     }
 };
+```
+
+> 时间复杂度：`O(N^2)`
+>
+> 空间复杂度：`O(1)`
+
+完整代码：
+
+```C++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+//选择排序
+void sortArray(vector<int>& nums) {
+    for(int i = 0; i < nums.size() - 1; i++) {
+        int minIndex = i;
+        for(int j = i + 1; j < nums.size(); j++) {
+            if(nums[j] < nums[minIndex]) {
+                minIndex = j;
+            }
+        }
+        swap(nums[i], nums[minIndex]);
+    }
+}
+//打印数组
+void printArray(vector<int>& nums) {
+    for(int i = 0; i < nums.size(); i++) {
+        cout << nums[i] << " ";
+    }
+    cout << endl;
+}
+
+int main() {
+
+    vector<int> nums = {5, 5, 6, 1, 3, 4, 7};
+    printArray(nums);
+    sortArray(nums);
+    printArray(nums);
+
+    return 0;
+}
+```
+
+输出：
+
+```
+5 5 6 1 3 4 7 
+1 3 4 5 5 6 7 
+```
+
+#### 2、插入排序
+
+##### 思路：
+
+
+
+##### 代码：
+
+```
+
 ```
 
