--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -2,37 +2,37 @@
 
 * 一、非线性时间比较类排序
   * 1.1 交换排序
-    * [① 冒泡排序](#1.1.1)
-    * [② 快速排序](#1.1.2)
-  * 
-
-
-
-
-
-> * 非线性时间比较类排序
->   * 交换排序
->     * 冒泡排序
->     * 快速排序
->   * 插入排序
->     * 简单插入排序
->     * 希尔排序
->   * 选择排序
->     * 简单选择排序
->     * 堆排序
->   * 归并排序
->     * 二路归并排序
->     * 多路归并排序
-> * 线性时间非比较类排序
->   * 计数排序
->   * 桶排序
->   * 基数排序
+    * [冒泡排序](#1.1.1)
+    * [快速排序](#1.1.2)
+  * 1.2 插入排序
+    * [简单插入排序](#1.2.1)
+    * [希尔排序](#1.2.2)
+  * 1.3 选择排序
+    * [简单选择排序](#1.3.1)
+    * [堆排序](#1.3.2)
+  * 1.4 归并排序
+    * [二路归并排序](#1.4.1)
+    * [多路归并排序](#1.4.2)
+* 二、线性时间非比较类排序
+  * 2.1 [计数排序](#2.1)
+  * 2.2 [桶排序](#2.2)
+  * 2.3 [基数排序](2.2)
 
 ```
 背景：给一个整数数组nums，要求将该数组升序或者降序排列。
 ```
 
 #### <h2 id="1.1.1"> 冒泡排序</h2>
+
+##### 思路：
+
+
+
+##### 代码：
+
+
+
+#### <h2 id="1.3.1"> 选择排序</h2>
 
 ##### 思路：
 
@@ -114,7 +114,7 @@ int main() {
 1 3 4 5 5 6 7 
 ```
 
-#### 2、插入排序
+#### <h2 id="1.2.1"> 插入排序</h2>
 
 ##### 思路：
 
