--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -22,13 +22,38 @@
 背景：给一个整数数组nums，要求将该数组升序或者降序排列。
 ```
 
+
+
 #### <h2 id="1.1.1"> 冒泡排序</h2>
 
 ##### 思路：
 
+冒泡排序在扫描过程中两两比较相邻记录，如果反序则交换，最终，最大记录就被“沉到”了序列的最后一个位置，第二遍扫描将第二大记录“沉到”了倒数第二个位置，重复上述操作，直到n-1 遍扫描后，整个序列就排好序了。
 
+(1)两两比较相邻元素`A(I)`和`A(I+1)(I=1,2,…N-1)`,如果`A(I)>A(I+1)`,则交换`A(I)`和`A(I+1)`的位置；
+
+(2)对剩下的`N-1`个元素，再两两进行比较，按同样规则交换它们的位置,经过`N-2`次比较,将次最大值交换到`A(N-1)`的位置;
+
+(3)如法炮制,经过`N-1`趟的“冒泡处理”,每趟进行`N-i`次的比较,全部数列有序。
 
 ##### 代码：
+
+```C++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        int len = nums.size();
+        for(int i = 0; i < len - 1; i++) {  //i控制n-1趟冒泡（n-1是因为最后一个数不需要比较，自动就出来了）
+            for(int j = 0; j < len - (i + 1); j++) {  //控制每趟冒泡时两两比较的下标索引（第i趟说明后面已经"沉了"i + 1个数，那么只需要对未排序的数（即len-(i+1)个）进行两两比较即可）
+                if(nums[j] > nums[j + 1]) {  //降序：">"改成"<"
+                    swap(nums[j], nums[j + 1]);
+                }
+            }
+        }
+        return nums;
+    }
+};
+```
 
 
 
@@ -40,9 +65,7 @@
 
 也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
 
-##### 代码：
-
-算法：
+##### 代码（默认升序）：
 
 ```c++
 class Solution {
@@ -54,7 +77,7 @@ public:
             //选择区间[i, len - 1]内最小元素的索引，将其与下标i的元素（即未排定部分的开头）交换
             int minIndex = i;
             for(int j = i + 1; j < len; j++) {
-                if(nums[j] < nums[minIndex]) {
+                if(nums[j] < nums[minIndex]) {  //降序：将"<"改成">"
                     minIndex = j;
                 }
             }
@@ -69,50 +92,7 @@ public:
 >
 > 空间复杂度：`O(1)`
 
-完整代码：
 
-```C++
-#include <iostream>
-#include <vector>
-#include <algorithm>
-using namespace std;
-//选择排序
-void sortArray(vector<int>& nums) {
-    for(int i = 0; i < nums.size() - 1; i++) {
-        int minIndex = i;
-        for(int j = i + 1; j < nums.size(); j++) {
-            if(nums[j] < nums[minIndex]) {
-                minIndex = j;
-            }
-        }
-        swap(nums[i], nums[minIndex]);
-    }
-}
-//打印数组
-void printArray(vector<int>& nums) {
-    for(int i = 0; i < nums.size(); i++) {
-        cout << nums[i] << " ";
-    }
-    cout << endl;
-}
-
-int main() {
-
-    vector<int> nums = {5, 5, 6, 1, 3, 4, 7};
-    printArray(nums);
-    sortArray(nums);
-    printArray(nums);
-
-    return 0;
-}
-```
-
-输出：
-
-```
-5 5 6 1 3 4 7 
-1 3 4 5 5 6 7 
-```
 
 #### <h2 id="1.2.1"> 插入排序</h2>
 
