--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -44,7 +44,9 @@ public:
     vector<int> sortArray(vector<int>& nums) {
         int len = nums.size();
         for(int i = 0; i < len - 1; i++) {  //i控制n-1趟冒泡（n-1是因为最后一个数不需要比较，自动就出来了）
-            for(int j = 0; j < len - (i + 1); j++) {  //控制每趟冒泡时两两比较的下标索引（第i趟说明后面已经"沉了"i + 1个数，那么只需要对未排序的数（即len-(i+1)个）进行两两比较即可）
+            //控制每趟冒泡时两两比较的下标索引
+            //第i趟说明后面已经"沉了"i + 1个数，那么只需要对未排序的数（即len-(i+1)个）进行两两比较即可
+            for(int j = 0; j < len - (i + 1); j++) {  
                 if(nums[j] > nums[j + 1]) {  //降序：">"改成"<"
                     swap(nums[j], nums[j + 1]);
                 }
