--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -28,23 +28,19 @@
 
 ##### 思路：
 
-冒泡排序在扫描过程中两两比较相邻记录，如果反序则交换，最终，最大记录就被“沉到”了序列的最后一个位置，第二遍扫描将第二大记录“沉到”了倒数第二个位置，重复上述操作，直到n-1 遍扫描后，整个序列就排好序了。
+冒泡排序在扫描过程中两两比较相邻记录，如果反序则交换，最终，最大记录就被“沉到”了序列的最后一个位置，第二遍扫描将第二大记录“沉到”了倒数第二个位置，重复上述操作，直到 `n-1` 遍扫描后，整个序列就排好序了。
 
-(1)两两比较相邻元素`A(I)`和`A(I+1)(I=1,2,…N-1)`,如果`A(I)>A(I+1)`,则交换`A(I)`和`A(I+1)`的位置；
+##### 代码（默认升序）：
 
-(2)对剩下的`N-1`个元素，再两两进行比较，按同样规则交换它们的位置,经过`N-2`次比较,将次最大值交换到`A(N-1)`的位置;
-
-(3)如法炮制,经过`N-1`趟的“冒泡处理”,每趟进行`N-i`次的比较,全部数列有序。
-
-##### 代码：
+`for(int i = 0; i < n - 1; i++)`：`i`从`0`开始，那么`i`最大能取到`n-2`，总共会遍历`n-1`次
 
 ```C++
 class Solution {
 public:
     vector<int> sortArray(vector<int>& nums) {
         int len = nums.size();
-        for(int i = 0; i < len - 1; i++) {  //i控制n-1趟冒泡（n-1是因为最后一个数不需要比较，自动就出来了）
-            //控制每趟冒泡时两两比较的下标索引
+        for(int i = 0; i < len - 1; i++) {  //i控制len-1趟冒泡（len-1是因为最后一个数不需要比较，自动就出来了）
+            //j控制每趟冒泡时两两比较的下标索引
             //第i趟说明后面已经"沉了"i + 1个数，那么只需要对未排序的数（即len-(i+1)个）进行两两比较即可
             for(int j = 0; j < len - (i + 1); j++) {  
                 if(nums[j] > nums[j + 1]) {  //降序：">"改成"<"
@@ -57,7 +53,9 @@ public:
 };
 ```
 
-
+> 时间复杂度：`O(N^2)`
+>
+> 空间复杂度：`O(1)`
 
 #### <h2 id="1.3.1"> 选择排序</h2>
 
@@ -65,7 +63,7 @@ public:
 
 每一轮选择最小的元素，将其交换到前面未排定部分的开头。
 
-也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
+也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面下标区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
 
 ##### 代码（默认升序）：
 
