--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -57,7 +57,11 @@ public:
 >
 > 空间复杂度：`O(1)`
 
-#### <h2 id="1.3.1"> 选择排序</h2>
+
+
+<h2 id="1.1.2">快速排序 </h2>
+
+<h2 id="1.3.1"> 选择排序</h2>
 
 ##### 思路：
 
