--- a/堆/215.数组中的第K个最大元素_M.md
+++ b/堆/215.数组中的第K个最大元素_M.md
@@ -50,23 +50,79 @@ public:
 };
 ```
 
-【题解思路1—退化的快排partition】
+【[题解思路1—退化的快排—快速选择](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/solution/ge-chong-pai-xu-suan-fa-tu-xie-zong-jie-by-ke-ai-x/)】
 
+借助快排的思想：
 
+每一次把最左边的值作为基准`base`，通过左右两个哨兵`i`，`j`的不断移动和交换，最终`base`归位后，使得`base`左边的数都比`base`大，`base`右边的数都比`base`小（整体向降序靠拢），此时`base`归位后的下标为`p`，比较`index = k-1`和`p`的大小，若`p > index`那么目标数字在`[left, p-1]`内，若`p < index`，则目标数字在`[p+1, right]`内
 
-【题解代码1—退化的快排partition】
+【题解代码1—退化的快排—快速选择】
 
+```C++
+class Solution {
+public:
+    int findKthLargest(vector<int>& nums, int k) {
+        int index = k - 1;  //降序的话，第k大的数字下标就是k-1
+        int left = 0, right = nums.size() - 1;
+        while(left <= right) {
+            int p = patition(left, right, nums);  //快排的思想，得到p为base归位后的下标
+            if(p < index) {  //若p < index，那么目标数字在[p+1, right]内
+                left = p + 1;
+            }
+            else if(p > index) {  //若p > index，则目标数字在[left, p-1]内
+                right = p - 1;
+            }
+            else return nums[p];  //p == index，目标数字就是p下标对应的数字
+        }
+        return -1;
+    }
+    //快排的思想
+    int patition(int left, int right, vector<int>& arr) {
+        int i = left, j = right;
+        int base = arr[left];
+        while(i < j) {
+            while(arr[j] <= base && i < j) {  //降序
+                j--;
+            }
+            while(arr[i] >= base && i < j) {
+                i++;
+            }
+            swap(arr, i, j);
+        }
+        swap(arr, left, i);
+        return i;  //返回基准base归位后的下标
+    }
+
+    void swap(vector<int>& arr, int a, int b) {
+        int temp = arr[a];
+        arr[a] = arr[b];
+        arr[b] = temp;
+    }
+};
 ```
 
-```
+【[题解思路2—小顶堆](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/solution/zi-jie-ti-ku-215-zhong-deng-shu-zu-zhong-kjbd/)】
 
-【题解思路2—小顶堆】
-
-
+维护一个小顶堆`priority_queue`，首先将k个元素放到堆中，然后遍历`nums`中后续的元素，并且与堆顶元素进行比较，若大于堆顶元素，则弹出堆顶元素后将新元素入堆，遍历结束后堆顶元素就是第`k`大的元素
 
 【题解代码2—小顶堆】
 
-```
-
+```C++
+class Solution {
+public:
+    int findKthLargest(vector<int>& nums, int k) {
+        priority_queue<int, vector<int>, greater<int>> min_heap;  //小顶堆
+        for(int i = 0; i < k; i++) {  //先放入k个元素
+            min_heap.push(nums[i]);
+        }    
+        for(int i = k; i < nums.size(); i++) {  //遍历剩余的元素，大于堆顶元素则入堆，最后小顶堆中就是最大的k个元素
+            if(nums[i] > min_heap.top()) {
+                min_heap.pop();
+                min_heap.push(nums[i]);
+            }
+        }
+        return min_heap.top();  //返回堆顶元素即是第k大的元素
+    }
+};
 ```
 
