--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -151,11 +151,41 @@ public:
 
 **思路**：
 
+1. 从第一个元素`(i=0)`开始，该元素可以认为已被排序，所以`i`从`1`开始；
+2. 取出下一个元素，在已经排序的元素序列中从后向前扫描（由`j`控制）；
+3. 如果该元素（已排序）大于新元素，将该元素移到下一个位置；
+4. 重复步骤3，直到找到已排序的元素小于或者等于新元素的位置；
+5. 将新元素插入到该位置后，重复2~5
 
+**代码（默认升序）**：
 
-**代码**：
-
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        selectSort(nums);
+        return nums;
+    }
+	//选择排序的实现
+    void selectSort(vector<int>& arr) {
+        //i控制遍历插入的轮次，j用来将前面有序的元素后移（i从1开始，默认第一个元素已经排序）
+        for(int i = 1; i < arr.size(); i++) {
+            //暂存位置i的元素值
+            int temp = arr[i];
+            int j = i;
+            //根据升（降）序将前面的有序数字后移直到j为0 或 找到已排序的元素小于或者等于新元素(temp)的位置
+            while(j > 0 && arr[j - 1] > temp) {  //降序只需要改变">"为"<"
+                arr[j] = arr[j - 1];
+                j--;
+            }
+            //将（暂存的）待插入元素插入
+            arr[j] = temp;
+        }
+    }
+};
 ```
 
-```
+> 时间复杂度：`O(N^2)`
+>
+> 空间复杂度：`O(1)`
 
