--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -5,10 +5,10 @@
     * [冒泡排序](#1.1.1)
     * [快速排序](#1.1.2)
   * 1.2 插入排序
-    * [简单插入排序](#1.2.1)
+    * [直接插入排序](#1.2.1)
     * [希尔排序](#1.2.2)
   * 1.3 选择排序
-    * [简单选择排序](#1.3.1)
+    * [直接选择排序](#1.3.1)
     * [堆排序](#1.3.2)
   * 1.4 归并排序
     * [二路归并排序](#1.4.1)
@@ -188,4 +188,55 @@ public:
 > 时间复杂度：`O(N^2)`
 >
 > 空间复杂度：`O(1)`
+
+
+
+<h2 id="1.2.2"> 希尔排序</h2>
+
+**[思路](https://blog.csdn.net/Hedenghui777/article/details/113135157)**：
+
+「希尔排序」是对直接插入排序的优化，在直接插入排序里，如果靠后的数字较小，它来到前面就得交换多次。「希尔排序」改进了这种做法。带间隔地使用插入排序，直到最后「间隔」为 1 的时候，就是标准的「插入排序」，此时数组里的元素已经「几乎有序」了
+
+**代码（默认升序）**：
+
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        shellSort(nums);
+        return nums;
+    }
+
+    void shellSort(vector<int>& arr) {
+        int len = arr.size();
+        int gap = 1;
+        //使用knuth增量序列找增量gap的最大值
+        while(3 * gap + 1 < len) {
+            gap = 3 * gap + 1;
+        }
+        while(gap >= 1) {
+            //按照间隔gap将nums分成不同的组，每个组内进行插入排序
+            //直至最后gap为1，所有元素都在同一组中，便是基本的插入排序算法
+            for(int i = gap; i < len; i++) {
+                insertByGap(arr, gap, i);
+            }
+            gap = gap / 3;
+        }
+    }
+	//和插入排序类似，只不过将nums[i]插入到对应分组的正确位置上（与gap相关）
+    void insertByGap(vector<int>& arr, int gap, int i) {
+        int temp = arr[i];
+        int j = i;
+        while(j >= gap && arr[j - gap] > temp) {  //降序只要将">"改成"<"即可
+            arr[j] = arr[j - gap];
+            j -=gap;
+        }
+        arr[j] = temp;
+    }
+};
+```
+
+> 时间复杂度：根据增量序列的不同而不同
+>
+> 空间复杂度：O(1)
 
