--- a/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
+++ b/动态规划/198.打家劫舍_M/198.打家劫舍_M.md
@@ -48,7 +48,7 @@ public:
         dp[0] = 0;  //dp数组初始化
         dp[1] = nums[0];
         for(int i = 2; i <= nums.size(); i++) {  //构造dp数组
-            dp[i] = max(dp[i - 1], dp[i - 2] + nums[i-1]);  //递推方程，注意这里nums[i-1]，因为dp数组比nums多了个长度为0的初始条件dp[0]
+            dp[i] = max(dp[i - 1], dp[i - 2] + nums[i-1]);  //递推方程，注意这里nums[i-1]，因为dp数组比nums多了个长度为0的初始条件dp[0]，道理和上面初始化的时候：dp[1] = nums[0]一样
         }
         return dp[nums.size()];
     }
