--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -24,7 +24,7 @@
 
 
 
-<h2 id="1.1.1"> 冒泡排序</h2>
+<h2 id="1.1.1">冒泡排序</h2>
 
 **思路**：
 
@@ -63,7 +63,7 @@ public:
 
 
 
-<h2 id="1.1.2">快速排序 </h2>
+<h2 id="1.1.2">快速排序</h2>
 
 **思路**：
 
@@ -106,48 +106,9 @@ public:
 >
 > 空间复杂度：O(logN)，这里占用的空间主要来自递归函数的栈空间
 
-<h2 id="1.3.1"> 选择排序</h2>
-
-**思路**：
-
-每一轮选择最小的元素，将其交换到前面未排定部分的开头。
-
-也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面下标区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
-
-**代码（默认升序）**：
-
-```c++
-class Solution {
-public:
-    vector<int> sortArray(vector<int>& nums) {
-    	selectSort(nums);
-        return nums;
-    }
-    //选择排序的实现
-    void selectSort(vector<int>& arr) {
-        int len = arr.size();
-        //[0,i)有序，且该区间里所有的元素就是最终排定的样子
-        for(int i = 0; i < len - 1; i++) {
-            //选择区间[i, len - 1]内最小元素的索引，将其与下标i的元素（即未排定部分的开头）交换
-            int minIndex = i;
-            for(int j = i + 1; j < len; j++) {
-                if(arr[j] < arr[minIndex]) {  //降序：将"<"改成">"
-                    minIndex = j;
-                }
-            }
-            swap(arr[i], arr[minIndex]);
-        }
-    }
-};
-```
-
-> 时间复杂度：`O(N^2)`
->
-> 空间复杂度：`O(1)`
 
 
-
-<h2 id="1.2.1"> 插入排序</h2>
+<h2 id="1.2.1">插入排序</h2>
 
 **思路**：
 
@@ -191,7 +152,7 @@ public:
 
 
 
-<h2 id="1.2.2"> 希尔排序</h2>
+<h2 id="1.2.2">希尔排序</h2>
 
 **[思路](https://blog.csdn.net/Hedenghui777/article/details/113135157)**：
 
@@ -237,6 +198,131 @@ public:
 ```
 
 > 时间复杂度：根据增量序列的不同而不同
+>
+> 空间复杂度：O(1)
+
+
+
+<h2 id="1.3.1">选择排序</h2>
+
+**思路**：
+
+每一轮选择最小的元素，将其交换到前面未排定部分的开头。
+
+也就是说：对于每一个数`nums[i]`，都要对它及后面所有数进行大小比较，得到后面下标区间`[i, len - 1]`内最小的数`nums[minIndex]`，再将这两个数进行交换。
+
+**代码（默认升序）**：
+
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+    	selectSort(nums);
+        return nums;
+    }
+    //选择排序的实现
+    void selectSort(vector<int>& arr) {
+        int len = arr.size();
+        //[0,i)有序，且该区间里所有的元素就是最终排定的样子
+        for(int i = 0; i < len - 1; i++) {
+            //选择区间[i, len - 1]内最小元素的索引，将其与下标i的元素（即未排定部分的开头）交换
+            int minIndex = i;
+            for(int j = i + 1; j < len; j++) {
+                if(arr[j] < arr[minIndex]) {  //降序：将"<"改成">"
+                    minIndex = j;
+                }
+            }
+            swap(arr[i], arr[minIndex]);
+        }
+    }
+};
+```
+
+> 时间复杂度：`O(N^2)`
+>
+> 空间复杂度：`O(1)`
+
+
+
+<h2 id="1.3.2">堆排序</h2>
+
+**思路**：
+
+* 将无需序列构建成一个堆，根据升序降序需求选择大顶堆或小顶堆
+* 将堆顶元素与末尾元素交换，将最大元素"沉"到数组末端
+* 重新调整结构，使其满足堆定义，然后继续交换堆顶元素与当前末尾元素，反复执行调整+交换步骤，直到整个序列有序
+
+参考链接：
+
+[链接1](https://leetcode-cn.com/problems/sort-an-array/solution/fu-xi-ji-chu-pai-xu-suan-fa-java-by-liweiwei1419/)
+
+[链接2](https://www.cnblogs.com/chengxiao/p/6129630.html)
+
+**代码（默认升序）**：
+
+```c++
+/*
+代码主要由三部分组成：
+1：构建初始堆
+2：交换堆顶元素和末尾元素
+3：重建堆
+*/
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        heapSort(nums);
+        return nums;
+    }
+
+    //堆排序的实现
+    void heapSort(vector<int>& arr) {
+        int len = arr.size();
+        //先将无序序列建堆（升序——大顶堆，降序——小顶堆）
+        buildHeap(arr);
+        //对排列成大顶堆的数据：将堆顶的元素arr[0]与最后一个元素arr[i]交换（使最大元素到最后），
+        //再调整交换后堆顶较小的元素(使其下沉)，将其也排列成大顶堆，称为重建堆
+        //如此循环下沉得到递增序列
+        for(int i = len - 1; i >= 0;) {
+            swap(arr[0], arr[i]);
+            i--;
+            adjustHeap(arr, 0, i);
+        }
+    }
+
+    //建堆函数的实现
+    void buildHeap(vector<int>& arr) {
+        int len = arr.size();
+        //从最下面的非叶子节点开始向上遍历进行adjust（如下标从2->1->0，对应在树上的位置就是从右至左，从下至上）
+        for(int i = (len - 1)/2; i >= 0; i--) {
+            adjustHeap(arr, i, len - 1);
+        }
+    }
+
+    //将当前节点k进行交换，以满足大（小）顶堆的要求
+    void adjustHeap(vector<int>& arr, int k, int end) {
+        //2k+1就是k节点的左子节点
+        while(2 * k + 1 <= end) {  //2k+1 <= len意味着左子节点存在
+            int j = 2 * k + 1;  //用j来记录k的左子节点的下标
+            //则j+1就是k的右子节点的下标
+            if(j + 1 <= end && arr[j+1] > arr[j]) {  //若右子节点存在且右子节点值大于左子节点
+                j++;  //则j更新为右子节点的下标（j始终是k左右节点中更大的那个）
+            }
+            //将k节点与j节点值比较大小，由于构造大顶堆，则上层的值要大于下层的值
+            if(arr[k] < arr[j]) {  //如果不满足大顶堆的要求
+                swap(arr[k], arr[j]);  //则将两个值交换（小的值下沉）
+            }
+            else {  //否则说明此小分支满足大顶堆的要求，退出循环
+                break;
+            }
+            k = j;  //交换完成后将k更新为j，因为不能保证当前的子节点是它子树的最大值，所以需要继续向下比较
+        }
+    }
+};
+```
+
+注意：降序只需要将`adjustHeap()`函数中两个`if`里面的不等号取反即可
+
+> 时间复杂度：O(nlogn)
 >
 > 空间复杂度：O(1)
 
