--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -10,9 +10,7 @@
   * 1.3 选择排序
     * [直接选择排序](#1.3.1)
     * [堆排序](#1.3.2)
-  * 1.4 归并排序
-    * [二路归并排序](#1.4.1)
-    * [多路归并排序](#1.4.2)
+  * 1.4 [归并排序](#1.4)
 * 二、线性时间非比较类排序
   * 2.1 [计数排序](#2.1)
   * 2.2 [桶排序](#2.2)
@@ -102,9 +100,9 @@ public:
 
 降序排列：只需要修改两个哨兵左右移动条件的不等号即可
 
-> 时间复杂度：O(NlogN)，这里 *N* 是数组的长度
+> 时间复杂度：`O(NlogN)`，这里 *N* 是数组的长度
 >
-> 空间复杂度：O(logN)，这里占用的空间主要来自递归函数的栈空间
+> 空间复杂度：`O(logN)`，这里占用的空间主要来自递归函数的栈空间
 
 
 
@@ -199,7 +197,7 @@ public:
 
 > 时间复杂度：根据增量序列的不同而不同
 >
-> 空间复杂度：O(1)
+> 空间复杂度：`O(1)`
 
 
 
@@ -322,7 +320,63 @@ public:
 
 注意：降序只需要将`adjustHeap()`函数中两个`if`里面的不等号取反即可
 
-> 时间复杂度：O(nlogn)
+> 时间复杂度：`O(nlogn)`
 >
-> 空间复杂度：O(1)
+> 空间复杂度：`O(1)`
+
+
+
+<h2 id="1.4">归并排序</h2>
+
+**思路**：
+
+见[剑指Offer51数组中的逆序对](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E5%89%91%E6%8C%87Offer/%E5%89%91%E6%8C%87Offer51.%E6%95%B0%E7%BB%84%E4%B8%AD%E7%9A%84%E9%80%86%E5%BA%8F%E5%AF%B9_H/%E5%89%91%E6%8C%87Offer51.%E6%95%B0%E7%BB%84%E4%B8%AD%E7%9A%84%E9%80%86%E5%BA%8F%E5%AF%B9_H.md)题解的分析
+
+**代码（默认升序）**：
+
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        mergeSort(nums, 0, nums.size() - 1);
+        return nums;
+    }
+	//归并排序的实现
+    void mergeSort(vector<int>& arr, int left, int right) {
+        int mid = left + (right - left) / 2;  //找中间点
+        if(left < right) {
+            mergeSort(arr, left, mid);  //递归划分左子数组
+            mergeSort(arr, mid + 1, right);  //递归划分右子数组
+            mergeTwoArray(arr, left, mid, right);  //合并已经排序的子数组     
+        }
+    }
+
+    void mergeTwoArray(vector<int>& arr, int left, int mid, int right) {
+        vector<int> temp(right - left + 1, 0);  //temp数组用来存放排序后的结果
+        int l_pos = left, r_pos = mid + 1;  //l_pos指向左有序数组的第一个元素，r_pos指向右有序数组的第一个元素
+        int index = 0;
+        while(l_pos <= mid && r_pos <= right) {  //合并两个有序数组到temp中
+            if(arr[l_pos] <= arr[r_pos]) {  //降序只需要将"<="修改为">="即可
+                temp[index++] = arr[l_pos++];
+            }
+            else {
+                temp[index++] = arr[r_pos++];
+            }
+        }
+        while(l_pos <= mid) {  //把左子数组剩余的数移入temp数组
+            temp[index++] = arr[l_pos++];
+        }
+        while(r_pos <= right) {  //把右子数组剩余的数移入temp数组
+            temp[index++] = arr[r_pos++];
+        }
+        for(int i = 0; i < temp.size(); i++) {  //将辅助数组temp中的元素覆盖原数组
+            arr[left + i] = temp[i];
+        }
+    }
+};
+```
+
+> 时间复杂度：`O(NlogN)`
+>
+> 空间复杂度：`O(N)`
 
