--- a/总结归纳/排序算法.md
+++ b/总结归纳/排序算法.md
@@ -382,3 +382,54 @@ public:
 >
 > 空间复杂度：`O(N)`
 
+
+
+<h2 id="2.1">计数排序</h2>
+
+**思路**：
+
+* 记录原数组中的`max`和`min`
+* 创建`max-len + 1`这么大跨度的数组`count`用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
+* 将`count`中值大于`0`的下标索引输出到原数组中（注意还原时加上`min`）
+
+**代码（默认升序）**：
+
+```c++
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        countingSort(nums);
+        return nums;
+    }
+    //计数排序的实现
+    void countingSort(vector<int>& arr) {
+        //记录原数组中的max和min
+        int max = *max_element(arr.begin(), arr.end());
+        int min = *min_element(arr.begin(), arr.end());
+        //创建max-len这么大跨度的数组count用于统计原数组中各数字出现的次数（下标为数字，值为出现的次数）
+        int len = max - min + 1;
+        vector<int> count(len, 0);  
+        for(int i = 0; i < arr.size(); i++) {
+            count[arr[i] - min]++;
+        }
+        //将count中值大于0的下标索引输出到原数组中，注意还原时加上min
+        int index = 0;
+        for(int i = 0; i < len; i++) {  //降序只要在还原输出的时候倒序即可: for(int i = len - 1; i >= 0; i--)
+            while(count[i] > 0) {
+                arr[index++] = i + min;
+                count[i]--;
+            }
+        }
+    }
+};
+```
+
+> 时间复杂度：O(N+K)，其中K是待排序数组元素的最大值
+>
+> 空间复杂度：O(K)
+
+计数排序的缺点：
+
+* 元素中有小数时不适合用计数排序
+* 元素大小相差较大时不适合（或者K非常大时），容易造成元素分布不集中，浪费空间
+
