--- a/总结归纳/二(多)叉树三种遍历.md
+++ b/总结归纳/二(多)叉树三种遍历.md
@@ -1,5 +1,9 @@
 ## 二叉树前中后序遍历（递归和栈模拟）
 
+### [参考链接](https://leetcode-cn.com/problems/n-ary-tree-postorder-traversal/solution/che-di-chi-tou-shu-de-qian-zhong-hou-xu-di-gui-fa-/)
+
+
+
 ### 1、前序遍历（[题144]([二叉树的前序遍历](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/))）
 
 * 递归
@@ -34,6 +38,8 @@
 
 * 栈模拟
 
+  【注意】左右子节点入栈出栈顺序
+  
   ```c++
   /**
    * Definition for a binary tree node.
@@ -65,19 +71,165 @@
   };
   ```
 
+* N叉树（[题589](https://leetcode-cn.com/problems/n-ary-tree-preorder-traversal/)）
+
+  * 递归
+
+    ```c++
+    /*
+    // Definition for a Node.
+    class Node {
+    public:
+        int val;
+        vector<Node*> children;
+    
+        Node() {}
+    
+        Node(int _val) {
+            val = _val;
+        }
+    
+        Node(int _val, vector<Node*> _children) {
+            val = _val;
+            children = _children;
+        }
+    };
+    */
+    
+    class Solution {
+    public:
+        vector<int> res;
+        vector<int> preorder(Node* root) {
+            recur(root);
+            return res;
+        }
+        void recur(Node* root) {
+            if(root == NULL) return;  //递归终止条件
+            res.push_back(root->val);  
+            for(int i = 0; i < root->children.size(); i++) {  //递归处理子节点
+                recur(root->children[i]);
+            }
+        }
+    };
+    ```
+
+  * 栈模拟
+
+    【注意】和用栈模拟二叉树的前序遍历一样，需要注意入栈的顺序
+
+    ```c++
+    /*
+    // Definition for a Node.
+    class Node {
+    public:
+        int val;
+        vector<Node*> children;
+    
+        Node() {}
+    
+        Node(int _val) {
+            val = _val;
+        }
+    
+        Node(int _val, vector<Node*> _children) {
+            val = _val;
+            children = _children;
+        }
+    };
+    */
+    
+    class Solution {
+    public:
+        vector<int> preorder(Node* root) {
+            vector<int> res;
+            if(root == NULL) return res;
+            stack<Node*> Stk;
+            Stk.push(root);
+            while(!Stk.empty()) {
+                root = Stk.top();
+                Stk.pop();
+                res.push_back(root->val);
+                for(int i = root->children.size() - 1; i >= 0 ; i--) {  //注意入栈顺序
+                    Stk.push(root->children[i]);
+                }
+            }
+            return res;
+        }
+    };
+    ```
+
+    
+
 ### 2、中序遍历（[题94]([二叉树的中序遍历](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/))）
 
 * 递归
 
-  ```
-  
+  ```c++
+  /**
+   * Definition for a binary tree node.
+   * struct TreeNode {
+   *     int val;
+   *     TreeNode *left;
+   *     TreeNode *right;
+   *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+   *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+   *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+   * };
+   */
+  class Solution {
+  public:
+      vector<int> res;
+      vector<int> inorderTraversal(TreeNode* root) {
+          inorder(root);
+          return res;
+      }
+      void inorder(TreeNode* root) {
+          if(root == nullptr) return;
+          inorder(root->left);  //左
+          res.push_back(root->val);  //中
+          inorder(root->right);  //右
+      }
+  };
   ```
 
 * 栈模拟
 
-  ```
+  【注意】写法是三者中比较特殊的，具体的应用见[题98验证二叉搜索树](https://github.com/Yorkzhang19961122/LeetCodeNotebook/blob/main/%E6%A0%91/98.%E9%AA%8C%E8%AF%81%E4%BA%8C%E5%8F%89%E6%90%9C%E7%B4%A2%E6%A0%91_M.md)
   
+  ```c++
+  /**
+   * Definition for a binary tree node.
+   * struct TreeNode {
+   *     int val;
+   *     TreeNode *left;
+   *     TreeNode *right;
+   *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+   *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+   *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+   * };
+   */
+  class Solution {
+  public:
+      vector<int> inorderTraversal(TreeNode* root) {
+          vector<int> res;
+          if(root == nullptr) return res;
+          stack<TreeNode*> Stk;
+          while(root != nullptr || !Stk.empty()) {
+              while(root != nullptr) {
+                  Stk.push(root);
+                  root = root->left;  //左
+              }
+              root = Stk.top();
+              Stk.pop();
+              res.push_back(root->val);  //中
+              root = root->right;  //右
+          }
+          return res;
+      }
+  };
   ```
+
+
 
 ### 3、后序遍历（[题145]([二叉树的后序遍历](https://leetcode-cn.com/problems/binary-tree-postorder-traversal/))）
 
@@ -111,7 +263,7 @@
   };
   ```
 
-* 栈模拟（将先序遍历的代码稍作修改即可）
+* 栈模拟（将先序遍历的代码稍作修改即可，注意反转结果数组）
 
   ```c++
   /**
@@ -147,5 +299,95 @@
   
   **先序遍历**：理想：中左右，实际入栈：中右左，出栈得到中左右
   
-  **后序遍历**：理想：左右中，实际入栈：中左右，出栈得到中右左，再将其反转`reverse`即可得到最终结果
+  **后序遍历**：理想：左右中，实际入栈：中左右，出栈得到中右左，再将其反转`reverse()`即可得到最终结果
+  
+* N叉树（[题590](https://leetcode-cn.com/problems/n-ary-tree-postorder-traversal/)）
+
+  * 递归
+
+    ```c++
+    /*
+    // Definition for a Node.
+    class Node {
+    public:
+        int val;
+        vector<Node*> children;
+    
+        Node() {}
+    
+        Node(int _val) {
+            val = _val;
+        }
+    
+        Node(int _val, vector<Node*> _children) {
+            val = _val;
+            children = _children;
+        }
+    };
+    */
+    
+    class Solution {
+    public:
+        vector<int> res;
+        vector<int> postorder(Node* root) {
+            recur(root);
+            return res;
+        }
+        void recur(Node* root) {
+            if(root == NULL) return;  //递归终止条件
+            for(int i = 0; i < root->children.size(); i++) {
+                recur(root->children[i]);  //递归节点的孩子
+            }
+            res.push_back(root->val);  //注意push_back的位置
+        }
+    };
+    ```
+
+  * 栈模拟
+
+    【注意】二叉树和N叉树**后序遍历**的**栈模拟方法**最后都是要反转结果数组的
+
+    ```c++
+    /*
+    // Definition for a Node.
+    class Node {
+    public:
+        int val;
+        vector<Node*> children;
+    
+        Node() {}
+    
+        Node(int _val) {
+            val = _val;
+        }
+    
+        Node(int _val, vector<Node*> _children) {
+            val = _val;
+            children = _children;
+        }
+    };
+    */
+    
+    class Solution {
+    public:
+        vector<int> postorder(Node* root) {
+            vector<int> res;
+            if(root == NULL) return res;
+            stack<Node*> Stk;
+            Stk.push(root);
+            while(!Stk.empty()) {
+                root = Stk.top();
+                Stk.pop();
+                res.push_back(root->val);
+                for(int i = 0; i < root->children.size(); i++) {
+                    Stk.push(root->children[i]);
+                }
+            }
+            reverse(res.begin(), res.end());  //注意反转vector的顺序
+            return res;
+        }
+    };
+    ```
+
+    
 
