--- a/总结归纳/二(多)叉树三种遍历.md
+++ b/总结归纳/二(多)叉树三种遍历.md
@@ -4,7 +4,7 @@
 
 
 
-### 1、前序遍历（[题144]([二叉树的前序遍历](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/))）
+### 1、前序遍历（[题144](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/)）
 
 * 递归
 
@@ -160,7 +160,7 @@
 
     
 
-### 2、中序遍历（[题94]([二叉树的中序遍历](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/))）
+### 2、中序遍历（[题94](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/)）
 
 * 递归
 
@@ -231,7 +231,7 @@
 
 
 
-### 3、后序遍历（[题145]([二叉树的后序遍历](https://leetcode-cn.com/problems/binary-tree-postorder-traversal/))）
+### 3、后序遍历（[题145](https://leetcode-cn.com/problems/binary-tree-postorder-traversal/)）
 
 * 递归
 
