--- a/动态规划/494.目标和_M.md
+++ b/动态规划/494.目标和_M.md
@@ -52,7 +52,7 @@ public:
         if((target + Sum) % 2 != 0) return 0;
         int bagSize = (target + Sum) / 2;
         vector<int> dp(bagSize + 1, 0);
-        dp[0] = 1;
+        dp[0] = 1;  //装满容量为0的背包，有1种方法，就是装0件物品
         for(int i = 0; i < nums.size(); i++) {  //遍历物品
             for(int j = bagSize; j >= nums[i]; j--) {  //遍历背包（01背包倒序且物品重量<=背包容量）
                 dp[j] += dp[j - nums[i]];
